appened remove button to list

--- a/Cookies_local_storage/7-index.html
+++ b/Cookies_local_storage/7-index.html
@@ -101,7 +101,8 @@
                   removeItemfromCart(item);
                 };
               })(item));
-
+              li.appendChild(removeButton);
+              ul.appendChild(li);
             }
           }
         }
