added clear cart button

--- a/Cookies_local_storage/7-index.html
+++ b/Cookies_local_storage/7-index.html
@@ -106,6 +106,12 @@
             }
             cartContainer.appendChild(ul);
           }
+
+          var clearButton = document.createElement('button');
+          clearButton.textContent = 'Clear my cart';
+          clearButton.addEventListener('click', function() {
+            clearCart();
+          });
         }
 
         createStore();
